--- a/Blog/app/templates/common/base.html
+++ b/Blog/app/templates/common/base.html
@@ -25,7 +25,7 @@
                 <li class="active"><a href="#">今日推荐<span class="sr-only">(current)</span></a></li>
                 <li><a target="_blank" href="http://www.liaoxuefeng.com/category/0013738748415562fee26e070fa4664ad926c8e30146c67000">教程</a></li>
                 <li><a target="_blank" href="https://v3.bootcss.com/">Bootstrap</a></li>
-                <li><a href="#">本站源码</a></li>
+                <li><a target="_blank" href="https://github.com/YYAXAY/Blog">本站源码</a></li>
                 <li><a href="#">关于我们</a></li>
 
                 <!--以下为复选框-->
